<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_16"
            android:layout_marginTop="@dimen/dim_16"
            android:layout_marginEnd="@dimen/dim_16"
            android:background="@color/background_secondary"
            android:contentDescription="@string/lbl_iv_description"
            android:paddingBottom="@dimen/dim_16"
            android:src="@drawable/ic_test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            style="@style/Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_16"
            android:layout_marginEnd="@dimen/dim_16"
            android:background="@color/background_secondary"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_test"
            tools:text="@string/lbl_test" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            style="@style/Text.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_16"
            android:layout_marginEnd="@dimen/dim_16"
            android:background="@color/background_secondary"
            android:gravity="left"
            android:paddingStart="@dimen/dim_8"
            android:paddingTop="@dimen/dim_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/lbl_test" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_comments"
            style="@style/Text.Tertiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_16"
            android:layout_marginEnd="@dimen/dim_16"
            android:background="@color/background_secondary"
            android:gravity="right"
            android:paddingTop="@dimen/dim_8"
            android:paddingEnd="@dimen/dim_8"
            android:paddingBottom="@dimen/dim_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            tools:text="@string/lbl_test" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_detail"
            style="@style/Text.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_16"
            android:layout_marginEnd="@dimen/dim_16"
            android:gravity="left"
            android:paddingTop="@dimen/dim_8"
            android:paddingBottom="@dimen/dim_8"
            android:text="@string/lbl_comment_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comments" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_16"
            android:layout_marginEnd="@dimen/dim_16"
            app:layout_constraintTop_toBottomOf="@id/tv_detail"
            tools:itemCount="100"
            tools:listitem="@layout/item_comment" />

        <include
            android:id="@+id/v_placeholder_generic"
            layout="@layout/placeholder_generic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_0"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>